# brewblox-brewfather-service

./: .editorconfig  .env  .gitignore  README.md  azure-pipelines.yml  pyproject.toml  tox.ini
YOUR_PACKAGE/: __main__.py  http_example.py
brewblox_brewfather_service/: __main__.py  brewfather_api_client.py  brewfather_automation.py  datastore.py  mash.json  publish_example.py  schemas.py  subscribe_example.py
brewblox_brewfather_service/api/: brewfather_api_client.py  spark_api_client.py
docker/: Dockerfile  before_build.sh
test/: brewfather_automation.json  conftest.py  sample_batch.json  sample_brewtracker.json  sample_recipe.json  state.json  test_brewfather_api_client.py  test_brewfather_automation.py  test_brewfather_client.py  test_http_example.py  test_publish_example.py  test_schemas.py  test_subscribe_example.py
test/brewtracker/: brewing.json  paused.json  planning.json  started.json
