[tool.poetry]
name = "brewblox-brewfather-service"
version = "0.1.0"
description = "This services intends to communicate with a brewfather account to fetech recipe and drive brewsparl automation on a brew day."
authors = ["Fabrice Dewasmes <fabrice.dewasmes@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4"
brewblox-service = "^0.33.0"
brewblox-spark-api = "^0.2.0"
marshmallow-enum = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest-flake8 = "^1.0.7"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pytest-aiohttp = "^0.3.0"
flake8 = "^3.8.4"
autopep8 = "^1.5.5"
pytest = "^6.2.2"
flake8-quotes = "^3.2.0"
aresponses = "^2.1.4"
mock = "^4.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
